==> dimitarm1/stm_flash_prj/STM32F0_Discovery_IO_Toggle/src/SDcard.c <==
#include "stm32f0xx_spi.h"
#include "stm32f0xx_gpio.h"
#include "stm32f0xx_rcc.h"
#include "stm32f0xx.h"
#include "ffconf.h"
#include "ff.h"
#include "xprintf.h"
#include "string.h"
#include "diskio.h"
#define GPIO_AF_SPI1      GPIO_AF_0
#define SPIx_SD                         SPI1
#define SPIx_SD_CLK                     RCC_APB2Periph_SPI1
#define SPIx_SD_CLK_INIT                RCC_APB2PeriphClockCmd
#define SPIx_SD_IRQn                    SPI1_IRQn
#define SPIx_SD_IRQHANDLER              SPI1_IRQHandler
#define SPIx_SD_SCK_PIN                 GPIO_Pin_5
#define SPIx_SD_SCK_GPIO_PORT           GPIOA
#define SPIx_SD_SCK_GPIO_CLK            RCC_AHBPeriph_GPIOA
#define SPIx_SD_SCK_SOURCE              GPIO_PinSource5
#define SPIx_SD_SCK_AF                  GPIO_AF_SPI1
#define SPIx_SD_MISO_PIN                GPIO_Pin_7
#define SPIx_SD_MISO_GPIO_PORT          GPIOA
#define SPIx_SD_MISO_GPIO_CLK           RCC_AHBPeriph_GPIOA
#define SPIx_SD_MISO_SOURCE             GPIO_PinSource7
#define SPIx_SD_MISO_AF                 GPIO_AF_SPI1
#define SPIx_SD_MOSI_PIN                GPIO_Pin_6
#define SPIx_SD_MOSI_GPIO_PORT          GPIOA
#define SPIx_SD_MOSI_GPIO_CLK           RCC_AHBPeriph_GPIOA
#define SPIx_SD_MOSI_SOURCE             GPIO_PinSource6
#define SPIx_SD_MOSI_AF                 GPIO_AF_SPI1
#define SPIx_SD_NSS_PIN                 GPIO_Pin_15
#define SPIx_SD_NSS_GPIO_PORT           GPIOA
#define SPIx_SD_NSS_GPIO_CLK            RCC_AHBPeriph_GPIOB

uint8_t rcvr_spi(void) {
  uint8_t Data = 0;

  /*!< Wait until the transmit buffer is empty */
  while (SPI_I2S_GetFlagStatus(SPIx_SD, SPI_I2S_FLAG_TXE) == RESET) {
  }
  /*!< Send the byte */
  SPI_SendData8(SPIx_SD, 0xFF);

  /*!< Wait until a data is received */
  while (SPI_I2S_GetFlagStatus(SPIx_SD, SPI_I2S_FLAG_RXNE) == RESET) {
  }
  /*!< Get the received data */
  Data = SPI_ReceiveData8(SPIx_SD);

  /*!< Return the shifted data */
  return Data;
}

static void power_on(void) {

  SPI_InitTypeDef SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;

  /* Enable GPIO clocks */
  RCC_AHBPeriphClockCmd(
      SPIx_SD_SCK_GPIO_CLK | SPIx_SD_MISO_GPIO_CLK | SPIx_SD_MOSI_GPIO_CLK
          | SPIx_SD_NSS_GPIO_CLK, ENABLE);

  /* Enable the SPI clock */SPIx_SD_CLK_INIT(SPIx_SD_CLK, ENABLE);

  /* SPI GPIO Configuration --------------------------------------------------*/

  /* Configure I/O for Flash Chip select */
  GPIO_InitStructure.GPIO_Pin = SPIx_SD_NSS_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(SPIx_SD_NSS_GPIO_PORT, &GPIO_InitStructure);

  /* SPI SCK pin configuration */
  GPIO_InitStructure.GPIO_Pin = SPIx_SD_SCK_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(SPIx_SD_SCK_GPIO_PORT, &GPIO_InitStructure);

  /* SPI  MOSI pin configuration */
  GPIO_InitStructure.GPIO_Pin = SPIx_SD_MOSI_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(SPIx_SD_MOSI_GPIO_PORT, &GPIO_InitStructure);

  /* SPI  MISO pin configuration */
  GPIO_InitStructure.GPIO_Pin = SPIx_SD_MISO_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(SPIx_SD_MISO_GPIO_PORT, &GPIO_InitStructure);

  /* Connect SPI pins to AF0 */
  GPIO_PinAFConfig(SPIx_SD_SCK_GPIO_PORT, SPIx_SD_SCK_SOURCE, SPIx_SD_SCK_AF);
  GPIO_PinAFConfig(SPIx_SD_MOSI_GPIO_PORT, SPIx_SD_MOSI_SOURCE,
      SPIx_SD_MOSI_AF);
  GPIO_PinAFConfig(SPIx_SD_MISO_GPIO_PORT, SPIx_SD_MISO_SOURCE,
      SPIx_SD_MOSI_AF);

  /* SPI configuration */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPIx_SD_BAUDRATE_SLOW; // 42000kHz/128=328kHz < 400kHz
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;

  SPI_Init(SPIx_SD, &SPI_InitStructure);
  SPI_RxFIFOThresholdConfig(SPIx_SD, SPI_RxFIFOThreshold_QF);

  SPI_CalculateCRC(SPIx_SD, DISABLE);
  SPI_Cmd(SPIx_SD, ENABLE);

  /* drain SPI TX buffer,just in case*/
  while (SPI_I2S_GetFlagStatus(SPIx_SD, SPI_I2S_FLAG_TXE) == RESET) {
    ;
  }
  SPI_ReceiveData8(SPIx_SD);

  /* De-select the Card: Chip Select high */
  SDDESELECT();

  /*
   //DMA setup, in case dma is ever needed, code snipped, not working
   DMA_StructInit(&DMA_InitStructure);
   RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);
   // reset DMA configuration

   //configure DMA
   DMA_InitStructure.DMA_MemoryBaseAddr = 0;
   DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t) &(SPI2->DR);
   DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
   DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
   DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
   DMA_InitStructure.DMA_BufferSize = 1;
   DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
   DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
   DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
   DMA_InitStructure.DMA_Priority = DMA_Priority_High;
   DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
   DMA_Init(SPI_PORT_TX_DMA_STREAM, &DMA_InitStructure);

   // Enable the DMA transfer complete interrupt
   DMA_ITConfig(SPI_PORT_TX_DMA_STREAM, DMA_IT_TC, ENABLE);

   // Enable SPI dma tx request.
   SPI_I2S_DMACmd(SPI2, SPI_I2S_DMAReq_Tx, ENABLE);

   // Enable the interrupt in the NVIC
   NVIC_InitStructure.NVIC_IRQChannel = SPI_PORT_DMA_TX_IRQn;
   NVIC_InitStructure.NVIC_IRQChannelPriority = 0;
   NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
   NVIC_Init(&NVIC_InitStructure);
   */

}

static void power_off(void) {

  GPIO_InitTypeDef GPIO_InitStructure;

  if (!(Stat & STA_NOINIT)) {
    SDSELECT();
    wait_ready();
    release_spi();
  }

  SPI_I2S_DeInit(SPIx_SD);
  SPI_Cmd(SPIx_SD, DISABLE);
  SPIx_SD_CLK_INIT(SPIx_SD_CLK, DISABLE);

  /* All SPI-Pins to input with weak internal pull-downs */
  GPIO_InitStructure.GPIO_Pin = SPIx_SD_SCK_PIN | SPIx_SD_MISO_PIN
      | SPIx_SD_MOSI_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
  GPIO_Init(SPIx_SD_SCK_GPIO_PORT, &GPIO_InitStructure);

  Stat |= STA_NOINIT; /* Set STA_NOINIT */

}

static uint8_t send_cmd(uint8_t cmd, uint32_t arg) {

  /* Declaration des variables ----------------------------- */
  uint8_t n, res;

  /* Test si c'est cmd ACDM -------------------------------- */
  if (cmd & 0x80) {
    cmd &= 0x7F;
    res = send_cmd(CMD55, 0); // envoie de la CMD55
    if (res > 1)
      return res;
  }

  /* Select the card --------------------------------------- */
  //  SDDESELECT();
  SDSELECT();

  /* wait for ready ---------------------------------------- */
  if (wait_ready() != 0xFF) {
    return 0xFF;
  }

  /* Send command packet ----------------------------------- */
  stm32_spi_rw(cmd); // Send command index

  stm32_spi_rw((uint8_t)(arg >> 24)); // Send argument[31..24]
  stm32_spi_rw((uint8_t)(arg >> 16)); // Send argument[23..16]
  stm32_spi_rw((uint8_t)(arg >> 8)); // Send argument[15..8]
  stm32_spi_rw((uint8_t) arg); // Send argument[7..0]

  n = 0x01; // Stop : Dummy CRC
  if (cmd == CMD0)
    n = 0x95; // Valid CRC for CMD0(0)
  if (cmd == CMD8)
    n = 0x87; // Valid CRC for CMD8(0x1AA)
  stm32_spi_rw(n); // Send CRC

  /* Receive command response ------------------------------ */
  if (cmd == CMD12)
    rcvr_spi(); // Skip a stuff byte when stop reading

  /* Wait for a valid response in timeout of 10 attempts --- */
  n = 10;
  do
    res = rcvr_spi();
  while ((res & 0x80) && --n);

  /* Return with the response value ------------------------ */
  return res;
}

DSTATUS disk_initialize(uint8_t drv) {

  /* Declaration des variables ----------------------------- */
  uint8_t i, ocr[4], SDType;

  /* Supports only single drive ---------------------------- */
  if (drv)
    return STA_NOINIT;

  /* No card in the socket --------------------------------- */
  if (Stat & STA_NODISK)
    return Stat;

  /* Configure les broches & alimente la carte si necessaire */
  power_on();

  SDDESELECT();

  /* 80 dummy clocks --------------------------------------- */
  for (i = 10; i; i--) {
    stm32_spi_rw(0xff);
  }

  /* Initialise SDType ------------------------------------- */
  SDType = 0;
// DEBUG
//  SDSELECT();
//  while (1) stm32_spi_rw(0xaa);
// END DEBUG


  /* Initialise la SDCard en mode SPI ---------------------- */
  if (send_cmd(CMD0, 0) == 1) {

    /* Verifie les conditions (tension,...) -------------- */
    if (send_cmd(CMD8, 0x1AA) == 1) {
      /* lecture des trames de reponses ---------------- */
      for (i = 0; i < 4; i++)
        ocr[i] = rcvr_spi();

      /* Verifie les tensions autorisees --------------- */
      if (ocr[2] == 0x01 && ocr[3] == 0xAA) {
        /* Attend de quitter l'etat repos ------------ */
        while (send_cmd(ACMD41, 0x40000000))
          ;

        /* Envoie de la commande OCR ----------------- */
        if (send_cmd(CMD58, 0) == 0) {
          for (i = 0; i < 4; i++)
            ocr[i] = rcvr_spi();

          /* Control bit CCS dans le registre OCR -- */
          if (ocr[0] & 0x40) {
            SDType = SD2_BLOCK;

          } else {
            SDType = SD2_BYTE;

          }
        }
      }
    }
  }

  /* Erreur d'initialisation ------------------------------- */
  else {
    SDType = 0;
  }

  /* Deselectionne la liaison SPI -------------------------- */
  release_spi();

  /* Affecte le type de la carte a CardType ---------------- */
  CardType = SDType;

  /* Test si l'initialisation est valide ------------------- */
  if (SDType) {
    /* Initialization succeeded -------------------------- */
    Stat &= ~STA_NOINIT; /* Clear STA_NOINIT */
    interface_speed(INTERFACE_FAST);
//    LED_ON;

  } else {
    /* Initialization failed ----------------------------- */
    power_off();
  }

  return Stat;

}
